#Fixes Product pages alignment
This commit updates product page to align its contents in center with proper margins.
Few other bugs and update.

--- a/imports/ui/stylesheets/product_list.less
+++ b/imports/ui/stylesheets/product_list.less
@@ -10,21 +10,16 @@
   border-color: @colorblue;
   border-style:solid;
   border-radius: 25px;
-  padding: 10px;
   height: 440px;
   width: 250px;
+  margin: 20px;
   }
-  .product_detail_image{
-    padding: 10px;
-    height: 500px;
-    width: 350px;
-  }
-
 
   .product_image{
-    padding: 10px;
-    height:280px;
-    width:230px;
+    padding-top:10px;
+    height:300px;
+    width:220px;
+    border-radius: 25px;
   }
 
   #product_title{
@@ -44,6 +39,7 @@
   text-align: left;
   }
 
+
   .add_to_cart_btn{
     border-style:solid;
     border-radius: 25px;
@@ -51,7 +47,7 @@
   }
 
   #product_row{
-    justify-content:space-between;
-    display: flex;
+    justify-content:space-evenly;
+    display:flex;
     flex-flow:row wrap;
   }
